--- a/engine/src/org/pentaho/di/trans/steps/univariatestats/stats/calculators/messages/messages_en_US.properties
+++ b/engine/src/org/pentaho/di/trans/steps/univariatestats/stats/calculators/messages/messages_en_US.properties
@@ -1,4 +1,6 @@
 MeanValueCalculator.Name=Mean
+PercentileValueCalculator.Median.Name=Median
+PercentileValueCalculator.ThPercentile.Name={0}thPercentile
 PercentileValueCalculator.Name=Cache And Sort
 PercentileValueCalculator.Provides=Quantile
 PercentileValueCalculator.Percentile.Name=Quantile Percent
